--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ r2d2-diesel = "0.16.0"
 [dependencies.rocket_contrib]
 version = "0.3.3"
 default-features = false
-features = ["handlebars_templates", "json"]
+features = ["tera_templates", "json"]
 
 [patch.crates-io]
 diesel = { git = "https://github.com/diesel-rs/diesel" }
