--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,12 @@ authors = ["Richard McCormack <brick@brick.codes>"]
 crawl_model = { git = "https://github.com/DenialAdams/crawl_model" }
 rocket = "0.3.3"
 rocket_codegen = "0.3.3"
-diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite", "large-tables"] }
-diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
+diesel = { version = "0.99", features = ["sqlite", "large-tables"] }
 dotenv = "0.10.1"
 serde = "1.0.15"
 serde_derive = "1.0.15"
-r2d2 = "0.7.4"
-r2d2-diesel = "0.16.0"
+r2d2 = "0.8.1"
+r2d2-diesel = "0.99.0"
 
 [dependencies.rocket_contrib]
 version = "0.3.3"
