--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "crawl_score_serve"
 version = "0.1.0"
 authors = ["Richard McCormack <brick@brick.codes>"]
+edition = "2018"
 
 [dependencies]
 crawl_model = { git = "https://github.com/DenialAdams/crawl_model" }
