--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2018"
 
 [dependencies]
 crawl_model = { git = "https://github.com/DenialAdams/crawl_model" }
-rocket = "0.3.3"
-rocket_codegen = "0.3.3"
-diesel = { version = "0.99", features = ["sqlite", "large-tables"] }
-dotenv = "0.10.1"
-serde = "1.0.15"
-serde_derive = "1.0.15"
-r2d2 = "0.8.1"
-r2d2-diesel = "0.99.0"
+rocket = "0.3"
+rocket_codegen = "0.3"
+diesel = { version = "1", features = ["sqlite", "32-column-tables"] }
+dotenv = "0.13"
+serde = "1"
+serde_derive = "1"
+r2d2 = "0.8"
+r2d2-diesel = "1"
 
 [dependencies.rocket_contrib]
 version = "0.3.3"
